sửa tạo danh sách

--- a/ss4_git_va_html/bai_tap/tao_danh_sach.html
+++ b/ss4_git_va_html/bai_tap/tao_danh_sach.html
@@ -6,21 +6,21 @@
 </head>
 <body>
 <ul>
-    <li>VIỆT NAM</li>
+    <li><b>VIỆT NAM</b></li>
     <ol>
         <li>HÀ NỘI</li>
         <li>SÀI GÒN</li>
         <li>HUẾ</li>
         <li>ĐÀ NẴNG</li>
     </ol>
-    <li>HOA KỲ</li>
+    <li><b>HOA KỲ</b></li>
     <ol>
         <li>NEWYORK</li>
         <li>LOS ANGERLES</li>
         <li>CHICAGO</li>
         <li>HOUTON</li>
     </ol>
-    <li>TRUNG QUỐC</li>
+    <li><b>TRUNG QUỐC</b></li>
     <ol>
         <li>BEIJING</li>
         <li>CHONGQING</li>
