--- a/ss4_git_va_html/thuc_hanh/luyen_tap.html
+++ b/ss4_git_va_html/thuc_hanh/luyen_tap.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>đây là file luyện tập html</title>
-    
-</head>
-<body>
+    <h1>Phần thực hành của html</h1>
+    <hr>
+    <h2>làm quen với các thẻ tiêu để h1..h6</h2>
+    <p>cộng hòa xã hội chủ nghĩa việt nam<br>độc lập tự do hạnh phúc</p>
+    <hr>
+    <h3>Qua đèo ngang</h3>
+    <pre>
+        Bước tới đèo ngang bóng xế tà
+        cỏ cây chen lá đá chen hoa,
+        lom khom dưới núi tiều vài chú
+        lác đác bên sông chơ mấy nhà
+        nhớ nước đau lòng con quốc quốc
+        thương nhà mỏi miệng cá da da
+        dừng chân đứng lại trời non nước
+        một mảnh tình riêng ta, với ta
+    </pre>
+    <h3>Tạo liên kết</h3>
+    <a href = https://docs.google.com/spreadsheets/d/1iatVclJcKjbbVHJqcbvNdkbkJ4LkEkwc/edit?gid=2004079002#gid=2004079002/>đây l slack</a>
+   <a href = https://www.google.com/target = "_blank">đây là google
+    <img src="../bai_tap/ảnh.jpg" height="300"
+         style="border=0"/>
+    </a>
+    <br>
+<img scr="https://i.pinimg.com/1200x/e5/d5/aa/e5d5aaf51724e5cf89ab2c1b4ae0c5e8.jpg"
+     alt="git logo"style="float:right:width 300">
 
-</body>
+
 </html>
