--- a/ss4_git_va_html/thuc_hanh/luyen_tap_cv.html
+++ b/ss4_git_va_html/thuc_hanh/luyen_tap_cv.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>cv cá nhân</title>
+    <h1>NGUYỄN VĂN A</h1>
 </head>
 <body>
-$END$
+
 </body>
 </html>
