nộp bài tạo bảng đơn giản

--- a/ss5_form_va_table/bai_tap/tao_bang_don_gian.html
+++ b/ss5_form_va_table/bai_tap/tao_bang_don_gian.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>tạo bảng đơn giản</title>
 </head>
 <body>
-$END$
+<h1 style="margin-left: 330px;color: blue">THỜI KHÓA BIỂU </h1>
+<label style="margin-left: 50px; color: blue">Lớp: T0809</label>
+<label style="margin-left: 500px; color: blue">Thời gian học: 13'30-17'30</label><br>
+<label style="margin-left: 50px; color: blue">Giáo viên: A</label>
+<label style="margin-left: 560px; color: blue">Ngày hoc: 3,5,7</label><br>
+<lable style="margin-left: 50px; color: blue">Phòng học: Lab3</lable><br>
+<table border="1" style="margin-left: 30px; width: 800px">
+<tr>
+    <th colspan="3"></th>
+    <th style="background-color: darkgoldenrod; text-align: center">Thứ 3</th>
+    <th style="background-color: darkgoldenrod; text-align: center">Thứ 5</th>
+    <th style="background-color: darkgoldenrod; text-align: center">Thứ 7</th>
+</tr>
+ <tr style="background-color: chocolate">
+     <th>Tuần</th>
+     <th>Ngày bắt đầu</th>
+     <th>Ngày kết thúc</th>
+     <th colspan="3">Môn học</th>
+ </tr>
+ <tr>
+     <td>01</td>
+     <td>1/9-30/9</td>
+     <td>1/10-30/10</td>
+     <td>C1L1</td>
+     <td>C2L2</td>
+     <td>C3L3</td>
+ </tr>
+<tr>
+     <td>02</td>
+     <td>1/11-30/11</td>
+     <td>1/12-30/12</td>
+     <td>C1L1</td>
+     <td>C2L2</td>
+     <td>C3L3</td>
+ </tr>
+<tr>
+     <td>03</td>
+     <td>...</td>
+     <td>...</td>
+     <td>...</td>
+     <td>...</td>
+     <td>...</td>
+ </tr>
+
+
+
+</table>
+
+<!--tạo bảng phần 1-->
+<!--<table border="1" style="margin-left: 450px" >&ndash;&gt;-->
+<!--    <tr>-->
+<!--    <th style="text-align: center; background-color: darkgoldenrod; width: 200px;">Thứ 3</th>-->
+<!--    <th style="text-align: center; background-color: darkgoldenrod; width: 200px">Thứ 5</th>-->
+<!--    <th style="text-align: center; background-color: darkgoldenrod; width: 200px">Thứ 7</th>-->
+<!--    </tr>-->
+<!--<tr>-->
+<!--   <td>CF-T1.L1</td>-->
+<!--   <td>CF-T2.L2</td>-->
+<!--   <td>CF-T3.L3</td>-->
+
+<!--</tr>-->
+<!--    <tr>-->
+<!--       <td>CF-T1.L1</td>-->
+<!--       <td>CF-T2.L2</td>-->
+<!--       <td>CF-T3.L3</td>-->
+
+<!--    </tr>-->
+
+<!--</table>-->
+
 </body>
 </html>
