sửa diểm trung bình

--- a/ss6_javacript/tinh_diem_trung_binh.html
+++ b/ss6_javacript/tinh_diem_trung_binh.html
@@ -18,11 +18,11 @@
    // let TRUNGBINH = (DIEMTOAN + DIEMLY + DIEMHOA)/3;
    // alert("điêm trung bình là: " + TRUNGBINH);
 function diemtrungbinh() {
-  let diemtoan = +document.getElementById("Diemtoan").value;
-  let diemly = +document.getElementById("Diemly").value;
-  let diemhoa = +document.getElementById("Diemhoa").value;
-          let trungbinh= (diemtoan+diemly+diemhoa)/3;
-  document.getElementById("result").innerText = "kết quả: " + trungbinh;
+  let diemToan = +document.getElementById("Diemtoan").value;
+  let diemLy = +document.getElementById("Diemly").value;
+  let diemHoa = +document.getElementById("Diemhoa").value;
+          let trungBinh= (diemToan+diemLy+diemHoa)/3;
+  document.getElementById("result").innerText = "kết quả: " + trungBinh;
 }
 </script>
 </body>
