sửa bài diện tich hình tròn

--- a/ss7_bien_kieu_du_lieu/bai_tap/chuyen_doi_nhiet_do.html
+++ b/ss7_bien_kieu_du_lieu/bai_tap/chuyen_doi_nhiet_do.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>chuyển đổi nhiệt độ</title>
+
 </head>
 <body>
-$END$
+<!--<input  id="cerius"placeholder="nhập độ C">-->
+<!--<button onclick="F()">Farenheit</button>-->
+<!--<h3 id="result">kết quả: </h3>-->
+<!--<script>-->
+<!--  function F() {-->
+<!--    let cerius= +document.getElementById("cerius").value;-->
+<!--    let farenhei = (cerius/5*9+32);-->
+<!--    document.getElementById("result").innerHTML ="Farenhei: " +farenhei;-->
+
+<!--  }-->
+<!--</script>-->
+<script>
+    let cerus = parseFloat(prompt("nhập độ c"));
+    let Fareheit = (cerus * 9 / 5 + 32);
+    alert(Fareheit);
+
+</script>
 </body>
 </html>
