--- a/ss7_bien_kieu_du_lieu/bai_tap/ung_dung_may_tinh.html
+++ b/ss7_bien_kieu_du_lieu/bai_tap/ung_dung_may_tinh.html
@@ -5,7 +5,7 @@
     <title>uwngs dụng máy tính</title>
 </head>
 <body>
-<input type="number"id="nuber1"placeholder="nhập số 1">
+<input type="number"id="nuber1"placeholder="nhập số 1" step="0.01">
 <input type="number"id="nuber2"placeholder="nhập số 2">
 <button onclick="phepcong()">Cộng</button>
 <button onclick="pheptru()">trừ</button>
