--- a/ss9_cau_truc_dieu_kien_2/bai_tap/bai_11_thue_thu_nhap_ca_nhan.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/bai_11_thue_thu_nhap_ca_nhan.html
@@ -20,10 +20,10 @@
             document.getElementById("result").innerText = "bạn không cần dóng thuế thu nhập đâu";
         } else if (income < 100) {
             tax = income * 8 / 100;
-            document.getElementById("result").innerText = "thuế thu nhập của bạn là: " + tax +" triệu";
+            document.getElementById("result").innerText = "thuế thu nhập của bạn là: " + tax +" triệu vnd";
         } else {
             tax = income * 15 / 100;
-            document.getElementById("result").innerText = "thuế thu nhập của bạn là: " + tax +" triệu";
+            document.getElementById("result").innerText = "thuế thu nhập của bạn là: " + tax +" triệu vnd";
 
         }
 
