--- a/ss11_vong_lap_2/bai_tap/bai_1.html
+++ b/ss11_vong_lap_2/bai_tap/bai_1.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>in ra dãy số fibonacci</title>
 </head>
 <body>
-$END$
+<script>
+    let f0 = 1;
+    let f1 = 1;
+    document.write(f0 + "<br>" + f1 + "<br>");
+    for (let i = 2; i <= 10; i += 1) {
+        let fi = f0 + f1;
+        f0 = f1;
+        f1 = fi;
+        document.write(fi + "<br>");
+    }
+</script>
 </body>
 </html>
