--- a/ss11_vong_lap_2/bai_tap/bai_2.html
+++ b/ss11_vong_lap_2/bai_tap/bai_2.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>tính giai thừa của số nguyen dương</title>
 </head>
 <body>
-$END$
+<script>
+  let n = parseInt(prompt("nhập số nguyên dương"));
+  let giaiThua =1;
+  for( let i = 1; i <= n; i++ ){
+    giaiThua = giaiThua*i;
+  }
+  alert(giaiThua);
+
+
+</script>
 </body>
 </html>
