--- a/ss11_vong_lap_2/bai_tap/bai_3.html
+++ b/ss11_vong_lap_2/bai_tap/bai_3.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>in tam giác vuông</title>
 </head>
 <body>
-$END$
+<script>
+    for (let i = 1; i <= 5; i++) {
+        for (let j = 1; j <= i; j++) {
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+
+    for (let n = 5; n >= 1; n--) {
+        for (let m = 1; m <= n; m++) {
+            document.write("*");
+        }
+        document.write("<br>");
+
+    }
+    for (let i = 1; i <= 5; i++) {
+        for (let j = i; j <= 4; j++) {
+            document.write("_");
+        }
+        for (let m = 1; m <= i; m++) {
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+    for (let i=1; i<=5; i++) {
+        for (let j=1;j<i;j++){
+            document.write("_");
+        }
+        for (let m=i;m<=5;m++){
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+
+</script>
 </body>
 </html>
